# git-gurus

./: .env.example  .gitignore  CHECKLIST_DEMO.md  README.md  pyproject.toml  requirements.txt  sprintO.py  test-envoi.txt
demo/: run-demo.ps1
docs/: architecture.md  protocol-spec.md
keys_b/: trust.json
src/ai/: gemini_service.py
src/cli/: main.py
src/crypto/: keys.py  session.py  trust_store.py
src/messaging/: service.py
src/network/: constants.py  discovery.py  message_history.py  packet.py  peer_list_server_sprint1.py  peer_table.py  peer_table_sprint1.py  tcp_client.py  tcp_server.py  wifi_direct.py
src/transfer/: chunk_store.py  chunking.py  manifest.py
src/ui/: dashboard.py
src/ui/static/: app.js  style.css
src/ui/templates/: index.html
tests/: test_e2e_sprint2.py  test_e2e_sprint3.py  test_peer_table.py
